--- a/css/style.css
+++ b/css/style.css
@@ -188,4 +188,71 @@ footer p{
 }
 
 /* Contact page */
+.contact{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 2em;
+    padding: 2em;
+    gap: 2em;
+    color: grey;
+    font-weight: bold;
+}
 
+#questions{
+    font-size: 2.5em;
+}
+
+#contact-me{
+    font-size: 2em;
+    text-align: center;
+    margin-top: 2em;
+}
+
+form{
+    font-size: 1em;
+    border-radius: 1em;
+    background-color: rgba(245, 245, 245, 0.787);
+    padding: 1.5em;
+    width: 18em;
+}
+
+form input{
+    width: 100%;
+    margin-bottom: 0.5em;
+    height: 2em;
+}
+
+textarea{
+    width: 100%;
+    margin-bottom: 0.5em;
+    min-height: 5em;
+    max-height: 15em;
+    min-width: 18em;
+    max-width: 100%;
+}
+
+#button{
+  background-color: grey;  
+  color: black;
+  height: 3em;
+  font-size: 1em;
+  font-weight: bold;
+  padding: 0.2em;
+  border: none;
+  border-radius: 0.5em;
+}
+
+#button:hover{
+    cursor: pointer;
+    transform: scale(0.9);
+    color: whitesmoke;
+}
+
+#meet{
+    font-size: 2em;
+    text-align: center;
+    margin-top: 2em;
+    margin-bottom: 1em;
+}
