--- a/css/style.css
+++ b/css/style.css
@@ -259,3 +259,16 @@ textarea{
 
 /* My Work (See all) */
 
+.container{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-height: 15vh;
+    
+}
+
+.glide__slide:hover{
+    transform: scale(1.3);
+}
