--- a/css/style.css
+++ b/css/style.css
@@ -267,3 +267,22 @@ textarea{
     justify-content: center;
     max-height: 15%;
 }
+
+.glide__slide img{
+    width: 100%;
+}
+
+.glide__slide{
+    filter: blur(5px);
+    opacity: 0.7;
+    transition: 0.3 linear;
+}
+.glide__slide--active{
+    opacity: 1;
+    filter: none;
+    transform: scale(1.5);
+}
+
+.glide__slides{
+    overflow: visible;
+}
