--- a/css/style.css
+++ b/css/style.css
@@ -260,22 +260,24 @@ textarea{
 /* My Work (See all) */
 
 .container{
-    margin: 0;
-    padding: 20px;
+    margin-top: 0;
+    margin-bottom: 2%;
+    padding: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
-    max-height: 15%;
+
 }
 
 .glide__slide img{
     width: 100%;
+    height: auto;
 }
 
 .glide__slide{
-    filter: blur(5px);
+    filter: blur(10px);
     opacity: 0.7;
-    transition: 0.3 linear;
+    transition-delay: 0.01s;
 }
 .glide__slide--active{
     opacity: 1;
@@ -284,5 +286,80 @@ textarea{
 }
 
 .glide__slides{
-    overflow: visible;
+    overflow: hidden;
+}
+
+.myWork-secciones{
+    display: flex;
+    justify-content: center;
+    font-size: 3em;
+    color: purple;
+    font-weight: bold;
+    margin-top: 1em;
+}
+
+.glide__slide video{
+    width: 100%;
+    height: auto;
+}
+
+/* Visuals */
+
+.visuals{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container-visuals{
+    width: 100%;
+    height: auto;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slider{
+    top: 0;
+    left: 0;
+    margin: 2%;
+    width: 50%;
+    height: 50%;
+
+}
+
+.container-visuals ul{
+    position: absolute;
+    bottom: 15%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 20;
+}
+
+.container-visuals ul li{
+    list-style: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    
+}
+
+.container-visuals ul li video{
+    width: 80%;
+    height: 50%;
+    transition: all 0.3s;
+}
+
+.container-visuals ul li video:hover{
+    transform: scale(1.3);
+}
+
+video{
+    width: 100%;
+    height: 100%;
 }
