--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,12 @@ a:hover{
     margin-right: 1em;
 }
 
+#logo :hover{
+    color: purple;
+    font-weight: bold;
+    transform: scale(1.2);
+}
+
 header{
     color: gray;
     position: sticky;
@@ -50,7 +56,7 @@ nav{
 
 .nav-links a{
     color: gray;
-    font-size: 1.5vw;
+    font-size: 1.5vw;    
 }
 
 .nav-links a:hover{
@@ -120,10 +126,10 @@ nav{
     left: 0;
     width: 100%;
     height: 100%;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px); /* Filtro */
     flex-direction: column;
     opacity: 0;
-    transition: opacity 0.25s;
+    transition: opacity 0.25s; /* Transicion */
 }
 
 .myWork-item-title:hover{
@@ -257,6 +263,14 @@ textarea{
     margin-bottom: 1em;
 }
 
+.warnings{
+    width: auto;
+    text-align: center;
+    margin: auto;
+    color: rgb(237, 68, 96);
+    padding-top: 1em;
+}
+
 /* My Work (See all) */
 
 .container{
@@ -274,7 +288,7 @@ textarea{
     height: auto;
 }
 
-.glide__slide{
+.glide__slide{ /* Transition */
     filter: blur(10px);
     opacity: 0.7;
     transition-delay: 0.01s;
@@ -282,7 +296,7 @@ textarea{
 .glide__slide--active{
     opacity: 1;
     filter: none;
-    transform: scale(1.5);
+    transform: scale(1.5); /* Transformaciones */
 }
 
 .glide__slides{
@@ -363,3 +377,5 @@ video{
     width: 100%;
     height: 100%;
 }
+
+
